--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Telegram bot</description>
 	<properties>
 		<java.version>17</java.version>
+		<telegram.version>6.1.0</telegram.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -40,6 +41,24 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-configuration-processor -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<version>2.7.3</version>
+		</dependency>
+
+		<!-- Telegram API -->
+		<dependency>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambotsextensions</artifactId>
+			<version>${telegram.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambots-spring-boot-starter</artifactId>
+			<version>${telegram.version}</version>
 		</dependency>
 	</dependencies>
 
