--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+bot.token=5536145611:AAFoHnYeqElzxFbsDbFiw04LlPc1CLESe10
+bot.usernameBot=kpd_hello_bot
 
+server.port=8090
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
+spring.datasource.username=postgres
+spring.datasource.password=qwerty
