--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,13 @@ bot.usernameBot=kpd_hello_bot
 
 server.port=8090
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
-spring.datasource.username=postgres
-spring.datasource.password=qwerty
+#spring.datasource.url=jdbc:h2://localhost:5432/kpd
+#spring.datasource.username=postgres
+#spring.datasource.password=qwerty
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
