--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-bot.token=
+bot.token=5536145611:AAFoHnYeqElzxFbsDbFiw04LlPc1CLESe10
 bot.usernameBot=kpd_hello_bot
 
 server.port=8090
 
-#spring.datasource.url=jdbc:h2://localhost:5432/kpd
-#spring.datasource.username=postgres
-#spring.datasource.password=qwerty
+spring.datasource.url=jdbc:h2://localhost:5432/kpd
+spring.datasource.username=postgres
+spring.datasource.password=qwerty
 
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.username=sa
