--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 bot.token=5536145611:AAFoHnYeqElzxFbsDbFiw04LlPc1CLESe10
 bot.usernameBot=kpd_hello_bot
 
+quote.url=https://zenquotes.io/api
+
 server.port=8090
 
-spring.datasource.url=jdbc:h2://localhost:5432/kpd
+spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
 spring.datasource.username=postgres
 spring.datasource.password=qwerty
 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.driver-class-name=org.postgresql.Driver
