--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 bot.token=5536145611:AAFoHnYeqElzxFbsDbFiw04LlPc1CLESe10
 bot.usernameBot=kpd_hello_bot
 
+weather.token=9ebc03d0692acbf40d256fd4ff250d87
+weather.url=https://api.openweathermap.org/data/2.5/weather
+
 quote.url=https://zenquotes.io/api
 
 server.port=8090
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
 spring.datasource.username=postgres
-spring.datasource.password=qwerty
+spring.datasource.password=qwertyu
 
 spring.datasource.driver-class-name=org.postgresql.Driver
