--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ server.port=8090
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
 spring.datasource.username=postgres
-spring.datasource.password=qwertyu
+spring.datasource.password=qwerty
 
 spring.datasource.driver-class-name=org.postgresql.Driver
