add: general tables in bd and work with them

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,13 @@ weather.url=https://api.openweathermap.org/data/2.5/weather
 quote.url=https://zenquotes.io/api
 
 server.port=8090
+user.time.send.default=10
+user.city.default=Moscow
+
+spring.jpa.open-in-view=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
 spring.datasource.username=postgres
