add: fix webservice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,12 @@ bot.token=5536145611:AAFoHnYeqElzxFbsDbFiw04LlPc1CLESe10
 bot.usernameBot=kpd_hello_bot
 
 weather.token=9ebc03d0692acbf40d256fd4ff250d87
-weather.url=https://api.openweathermap.org/data/2.5/weather
+weather.url=api.openweathermap.org/data/2.5/weather
 
-quote.url=https://zenquotes.io/api
+quote.url=zenquotes.io/api
 
 server.port=8090
+
 user.time.send.default=10
 user.city.default=Moscow
 
