--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create
 
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
 spring.datasource.username=postgres
-spring.datasource.password=qwerty
-
+spring.datasource.password=qwertyu
 spring.datasource.driver-class-name=org.postgresql.Driver
