--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ bot.usernameBot=kpd_hello_bot
 
 weather.token=9ebc03d0692acbf40d256fd4ff250d87
 weather.url=api.openweathermap.org/data/2.5/weather
+weather.geoUrl=api.openweathermap.org/geo/1.0/direct
 
 quote.url=zenquotes.io/api
 
@@ -14,8 +15,6 @@ user.city.default=Moscow
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
-
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
 spring.datasource.username=postgres
