fix: request web service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ quote.url=zenquotes.io/api
 server.port=8090
 
 user.time.send.default=10
-user.city.default=Moscow
+user.city.default=Ryazan
 
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
