add: film of the day

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
-bot.token=5536145611:AAFoHnYeqElzxFbsDbFiw04LlPc1CLESe10
-bot.usernameBot=kpd_hello_bot
+#bot.token=5536145611:AAFoHnYeqElzxFbsDbFiw04LlPc1CLESe10
+#bot.usernameBot=kpd_hello_bot
+
+bot.token=1341073321:AAGDVbM3UYQPnUFc37Je2LHOaNImTdHzf_4
+bot.usernameBot=tester_work_bot
 
 weather.token=9ebc03d0692acbf40d256fd4ff250d87
 weather.url=api.openweathermap.org/data/2.5/weather
 weather.geoUrl=api.openweathermap.org/geo/1.0/
 
 quote.url=zenquotes.io/api
+
+film.url=kinopoiskapiunofficial.tech
+film.token=7702d2b1-4c98-460e-ac1d-8b3d8cc2ac50
 
 server.port=8090
 
@@ -18,5 +24,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
 spring.datasource.username=postgres
-spring.datasource.password=qwerty
+spring.datasource.password=qwertyu
 spring.datasource.driver-class-name=org.postgresql.Driver
