add: film of the day

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ weather.geoUrl=api.openweathermap.org/geo/1.0/
 
 quote.url=zenquotes.io/api
 
-film.url=kinopoiskapiunofficial.tech/api/v2.2/films
+film.url=kinopoiskapiunofficial.tech/api/v2.2/films/premieres
 film.token=7702d2b1-4c98-460e-ac1d-8b3d8cc2ac50
 
 server.port=8090
