add: film of the day

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ weather.token=9ebc03d0692acbf40d256fd4ff250d87
 weather.url=api.openweathermap.org/data/2.5/weather
 weather.geoUrl=api.openweathermap.org/geo/1.0/
 
-quote.url=zenquotes.io/api
+quote.url=api.paperquotes.com/apiv1/qod/
+quote.token=58f92162ea0bd90bdf7ed89760feed9a4a3eaf2d
 
 film.url=kinopoiskapiunofficial.tech/api/v2.2/films/premieres
 film.token=7702d2b1-4c98-460e-ac1d-8b3d8cc2ac50
