add: news of the day

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,9 @@ quote.token=58f92162ea0bd90bdf7ed89760feed9a4a3eaf2d
 film.url=kinopoiskapiunofficial.tech/api/v2.2/films/premieres
 film.token=7702d2b1-4c98-460e-ac1d-8b3d8cc2ac50
 
+news.url=newsdata.io/api/1
+news.token=pub_122217548236e1143da98ca605e33f6fc1250
+
 server.port=8090
 
 user.time.send.default=10
