add: quote of the day

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,9 @@ film.token=7702d2b1-4c98-460e-ac1d-8b3d8cc2ac50
 news.url=newsdata.io/api/1
 news.token=pub_122217548236e1143da98ca605e33f6fc1250
 
+exchange-rate.url=api.apilayer.com/exchangerates_data
+exchange-rate.token=lUpDwo6OYFVp9uzm5IVtJxGkOFAGKN9P
+
 server.port=8090
 
 user.time.send.default=10
