add: news category selection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ server.port=8090
 
 user.time.send.default=10
 user.city.default=Ryazan
+user.newsCategory.default=technology
 
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
