--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,14 +18,14 @@ exchange-rate.token=lUpDwo6OYFVp9uzm5IVtJxGkOFAGKN9P
 
 server.port=8090
 
-user.time.send.default=10
+user.time.send.default=10:00
 user.city.default=Ryazan
 user.newsCategory.default=technology
 
 spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
 spring.datasource.username=postgres
 spring.datasource.password=qwerty
