--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,10 +22,10 @@ user.time.send.default=10:00
 user.city.default=Ryazan
 user.newsCategory.default=technology
 
-spring.jpa.open-in-view=true
+spring.jpa.open-in-view=true 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
 spring.datasource.username=postgres
 spring.datasource.password=qwerty
