fix for railway app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 bot.token=5536145611:AAFoHnYeqElzxFbsDbFiw04LlPc1CLESe10
 bot.usernameBot=kpd_hello_bot
+#bot.token=1341073321:AAGDVbM3UYQPnUFc37Je2LHOaNImTdHzf_4
+#bot.usernameBot=tester_work_bot
 
-weather.token=992cf9694bf6870a21d1167a2f84577d
+weather.token=9ebc03d0692acbf40d256fd4ff250d87
 weather.url=api.openweathermap.org/data/2.5/weather
 weather.geoUrl=api.openweathermap.org/geo/1.0/
 
@@ -22,11 +24,12 @@ user.time.send.default=10:00
 user.city.default=Ryazan
 user.newsCategory.default=technology
 
-spring.jpa.open-in-view=true 
+spring.jpa.open-in-view=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
+#spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
+spring.datasource.url=jdbc:postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
 spring.datasource.username=postgres
 spring.datasource.password=qwerty
 spring.datasource.driver-class-name=org.postgresql.Driver
