fix for railway app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
-spring.datasource.url=jdbc:postgresql://${{ PGUSER }}:${{ PGPASSWORD }}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
+spring.datasource.url=jdbc:postgresql://${PGUSER}:${PGPASSWORD}@${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=postgres
 spring.datasource.password=qwerty
 spring.datasource.driver-class-name=org.postgresql.Driver
