--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:postgresql://localhost:5432/kpd
-spring.datasource.url=jdbc:postgresql://postgres:AQtQQwIaNc16uqOzGfrd@containers-us-west-34.railway.app:5729/railway
-spring.datasource.username=postgres
-spring.datasource.password=qwerty
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
